<resources>
    <string name="app_name">Manual Do MC - GCEMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grande Conselho Estadual Do Mato Grosso do Sul - GCEMS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  Menu  -->
    <string name="menu_home">Início</string>
    <string name="menu_preface">Prefácio</string>
    <string name="menu_contacts">Contatos</string>
    <string name="menu_bank_details">Dados Bancários</string>
    <string name="menu_projects">Projetos</string>

    <!--  Home  -->
    <string name="home_meeting">Reunião</string>
    <string name="home_roles">Nominata</string>
    <string name="home_packages">Pacotes</string>
    <string name="home_tickets">Tickets</string>

    <!--  Project  -->
    <string name="project_links">Link do drive com editais</string>
    <string name="show_project_open_pdf">Abrir Edital em PDF</string>

    <!--  Bank Details  -->
    <string name="bank_details_title">Conta Bancária/PIX do GCEMS</string>
    <string name="bank_details_pix_title">Pix do GCEMS</string>
    <string name="bank_details_pix">Pix - CNPJ: 04.845.802/0001-53</string>
    <string name="bank_details_emails">E-mails do GCEMS:</string>
    <string name="bank_details_account_holder">Titular da Conta: Grande Conselho Estadual da Ordem DeMolay do Estado de Mato Grosso do Sul</string>
    <string name="bank_details_account">Dados Bancários</string>
    <string name="bank_details_account_agency">Agência: 4354</string>
    <string name="bank_details_account_number">Conta: 91191-7</string>
    <string name="bank_details_account_type">Tipo de Conta: Conta Corrente</string>
    <string name="bank_details_email_secretary">grandesecretario@demolayms.org</string>
    <string name="bank_details_email_adjunt_secretary">grandesecretarioadj@demolayms.org</string>
    <string name="bank_details_alert_message">Inclua sempre o número do pacote na descrição ao pagar e envie o comprovante para os GCEMS pelos e-mails acima.</string>

    <!--  Dialog  -->
    <string name="dialog_loading_roles">Carregando Cargos</string>
    <string name="dialog_saing_roles">Salvando Cargos</string>

    <!--  Labels  -->
    <string name="label_project_name">Project Name</string>
    <string name="label_project_description">This is a short description of the project.</string>
    <string name="label_email">Email</string>
    <string name="label_email_right">Email correto</string>
    <string name="label_cellphone">Celular - WhatsApp</string>
    <string name="label_placeholder">placeholder</string>
    <string name="label_role_name">Cargo</string>
    <string name="label_name">Nome</string>
    <string name="label_name_member">Nome do membro</string>
    <string name="label_check_list_item">Checklist Item</string>
    <string name="label_ticket_chapter">Capítulo</string>
    <string name="label_ticket_chapter_number">Número do Capítulo</string>
    <string name="label_ticket_store">Loja</string>
    <string name="label_ticket_store_number">Número da Loja</string>
    <string name="label_ticket_day">Dia</string>
    <string name="label_ticket_hour">Horário</string>
    <string name="label_ticket_package">Pacote</string>
    <string name="label_ticket_MC">Nome do MC</string>
    <string name="label_ticket_id">Id do membro</string>

    <!--  Preface  -->
    <string name="preface_title">Prefácio</string>

    <!--  Roles  -->
    <string name="roles_button_roles_save">Salvar Cargos</string>
    <string name="roles_button_roles_copy">Copiar Nominata</string>
    <string name="roles_error_missing_role">Cargo obrigatório para reunião</string>
    <string name="roles_updated_roles">Cargos atualizados!</string>

    <!-- Check List -->
    <string name="check_list_button">Finalizar</string>

    <!--  Package  -->
    <string name="package_create">Criação de Pacotes</string>
    <string name="package_send">Envio de pacote ao GCEMS</string>
    <string name="package_create_alert">Guarde o número do pacote, pois ele pode conter múltiplas ações. Pacotes com status \"Em Edição\" podem ser alterados, mas todas as modificações devem ser feitas antes da conclusão. O pacote e seu pagamento devem estar prontos 7 dias antes da cerimônia.</string>

    <!--  Tickets  -->
    <string name="ticket_create">Criação de Ticket</string>
    <string name="ticket_auth">Modelo de Ticket - Autorização GCMES</string>
    <string name="ticket_auth_tittle">Modelo Autorização GCMES</string>
    <string name="ticket_email">Modelo Atualização de Email</string>
    <string name="ticket_email_tittle">Ticket - Atualização de Email</string>
    <string name="ticket_button_ticket_copy_text">Copiar texto do modelo</string>
    <string name="ticket_error_missing_input">Campo obrigatório para modelo</string>
    <string name="ticket_observation_auth">Ticket para Autorização. Categoria: Secretaria SisDM Sub: Pacotes (Código de Autorização)</string>
    <string name="ticket_observation_email">Ticket para Atualização de Email. Categoria: Secretaria SisDM Sub: Membros (Atualização Cadastral)</string>

    <!--  Meeting  -->
    <string name="meeting_tips">Dicas - Preparar uma reunião</string>
    <string name="meeting_check_list">Check List de Reuniões</string>
    <string name="meeting_roles">Nominata da reunião</string>
    <string name="meeting_follow">Acompanhamento de Reunião</string>
    <string name="meeting_register">Registro de Reuniões</string>
    <string name="meeting_organization">Organização da Sala</string>
    <string name="meeting_initialization">Iniciação ao Grau Iniciático</string>
    <string name="meeting_elevation">Iniciação ao Grau DeMolay</string>
    <string name="meeting_public">Reunião Pública</string>
    <string name="meeting_public_observation">Para a Cerimônia das Flores, as flores podem ficar sobre o altar. No entanto, se for usado um vaso, um patamar deve ser colocado ao lado do altar para acomodá-lo.</string>
    <string name="meeting_initialization_observation">Um bom prazo deve ser dado entre o Escrutínio e o recolhimentoda taxa.</string>
    <string name="meeting_elevation_observation">Para solicitar materiais e paramentos ao GCEMS, use tickets com 7 dias de antecedência da cerimônia.</string>
    <string name="meeting_tip_tittle">Dicas de como preparar uma reunião</string>
    <string name="meeting_tip_tittle_description">O planejamento é crucial para uma reunião bem-sucedida. A seguir, apresentamos sete dicas para te auxiliar nesse processo.</string>
    <string name="meeting_form_initial_donation">0,00</string>
    <string name="meeting_form_day">Dia da reunião</string>
    <string name="meeting_form_start_hour">Horário de início da reunião</string>
    <string name="meeting_form_finish_hour">Horário de encerramento da reunião</string>
    <string name="meeting_form_word_of_the_day">Palavra do dia</string>
    <string name="meeting_form_donation">Tronco da solidariedade</string>
    <string name="meeting_form_add_agenda">Adicionar ordem do dia</string>
    <string name="meeting_form_agenda">Ordem do dia adicionada: </string>
    <string name="meeting_form_advance_button">Avançar</string>
    <string name="meeting_form_error_missing_input">Campo obrigatório para iniciar reunião</string>
    <string name="meeting_form_error_missing_agenda">É necessário, ao menos, um item da Ordem do dia</string>
    <string name="meeting_report_label_date">Data:</string>
    <string name="meeting_report_label_donations">Tronco da Solidariedade:</string>
    <string name="meeting_report_label_word_of_day">Palavra do Dia:</string>
    <string name="meeting_report_label_start_time">Início:</string>
    <string name="meeting_report_label_end_time">Término:</string>
    <string name="meeting_report_agenda">Ordem do dia desta reunião</string>
    <string name="meeting_report_roles">Nominata da reunião</string>
    <string name="meeting_report_annotations">Anotações desta reunião: </string>
    <string name="meeting_report_save">Salvar reunião</string>
    <string name="meeting_report_copy">Copiar dados da reunião</string>
    <string name="meeting_follow_title_important_pages">Páginas Importantes</string>
    <string name="meeting_follow_page_initiation_degree">Abertura do Grau Iniciático - Pág. 20</string>
    <string name="meeting_follow_page_late_comers">Aos que Chegam Atrasados - Pág. 14</string>
    <string name="meeting_follow_page_demolay_degree">Abertura do Grau DeMolay - Pág. 34</string>
    <string name="meeting_follow_page_exam_questionnaire">Questionário para Exame - Pág. 92</string>
    <string name="meeting_follow_page_working_degrees_recess">Trabalhando nos Graus e Recesso - Pág. 11</string>
    <string name="meeting_follow_page_nine_o_clock_ceremony">Cerimônia das Nove Horas - Pág. 39</string>
    <string name="meeting_follow_page_closing_ceremony">Cerimônia de Encerramento - Pág. 42</string>
    <string name="meeting_follow_page_lost_word">Palavra Perdida - Pág. 24</string>
    <string name="meeting_follow_title_agenda">Controle da Ordem do Dia</string>
    <string name="meeting_follow_finish_button">Finalizar Reunião</string>
    <string name="meeting_follow_error_missing_input">Campo obrigatório para encerrar reunião</string>
    <string name="meeting_report_title_order_of_business">Ordem Dos Trabalhos</string>
    <string name="meeting_report_button_save">Salvar Reunião</string>
    <string name="meeting_report_button_copy">Copiar Reunião</string>
    <string name="meeting_report_saving_meeting">Salvando Reunião</string>
    <string name="meeting_register_tittle">Reuniões Registradas</string>
    <string name="meeting_register_delete">Deletar reunião</string>
    <string name="meeting_register_searching">Buscando reuniões</string>
    <string name="meeting_register_deleting">Deletando reunião</string>
    <string name="meeting_form_create_tittle">Criando uma reunião</string>
    <string name="meeting_follow_up_tittle">Acompanhamento de Reunião</string>
    <string name="meeting_report_tittle">Relatório de Reunião</string>

</resources>