<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/organization_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/meeting_organization"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/initialization_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/meeting_initialization"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/elevation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/meeting_elevation"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/public_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/meeting_public"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>