<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        app:layout_constraintBottom_toTopOf="@+id/finalize_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linear_layout_important_pages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_follow_title_important_pages"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/text_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_working_degrees_recess" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_nine_o_clock_ceremony" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_closing_ceremony" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_lost_word" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_initiation_degree" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_late_comers" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_demolay_degree" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textSize="@dimen/text_12"
                    android:text="@string/meeting_follow_page_exam_questionnaire" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_order_of_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/meeting_report_title_order_of_business"
                android:gravity="center"
                android:textSize="@dimen/text_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_important_pages" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_order_of_business"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_0"
                android:fadeScrollbars="false"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_order_of_business" />

            <TextView
                android:id="@+id/text_view_agenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:text="@string/meeting_follow_title_agenda"
                android:textSize="@dimen/text_16"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_order_of_business" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_agenda"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_0"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:fadeScrollbars="false"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_agenda" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_donation"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:hint="@string/meeting_form_donation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_agenda" >

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/edit_text_donation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_finish_hour"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:hint="@string/meeting_form_finish_hour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_donation">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/edit_text_finish_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    app:mask="##h##" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/finalize_button"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/meeting_follow_finish_button"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>